<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/filter_linearLayout"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_filter_title"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="22sp" />
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/filter_profitability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_filter_profitability"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_filter_initialdate"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_minimumamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_filter_minimumAmount"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_filter_name"
            android:textColor="#000"
            android:textSize="16sp" />
...
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/filter_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_filter_order_asc"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_filter_order_dsc"
            android:textColor="#000"
            android:textSize="16sp" />
...
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/main_filter_clear"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/main_filter_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/positive_button"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/positive_button"
...
