<resources>
    <string name="app_name">Desafio Orama</string>

    <string name="main_rentabilidade_anual">Rentabilidade ano atual: %s%%</string>
    <string name="main_rentabilidade_mensal">Rentabilidade último mês: %s%%</string>
    <string name="main_rentabilidade_diaria">Rentabilidade último dia: %s%%</string>
    <string name="main_fees">Taxa administrativa: %1$s</string>
    <string name="main_operability_minimumInitialApplicationAmount">Aplicação mínima: R$%s</string>
    <string name="main_operability_minimumBalance">Saldo mínimo: R$%s</string>

    <string name="main_sharedelementTransition">fundosTransition%d</string>


    <string name="detail_rentabilidade_anual">Ano: %s%%</string>
    <string name="detail_fundo_initialDate">Desde %s</string>
    <string name="detail_rentabilidade_mensal">Mês: %s%%</string>
    <string name="detail_rentabilidade_diaria">Dia: %s%%</string>
    <string name="detail_rentabilidade_12m">12 meses: %s%%</string>
    <string name="detail_rentabilidade_24m">24 meses: %s%%</string>
    <string name="detail_rentabilidade_36m">36 meses: %s%%</string>
    <string name="detail_rentabilidade_48m">48 meses: %s%%</string>
    <string name="detail_rentabilidade_60m">60 meses: %s%%</string>
    <string name="main_error">Erro</string>
    <string name="main_error_detail">Aconteceu algo de errado e não conseguimos buscar a lista de fundos.</string>
    <string name="main_error_refresh">Recarregar</string>
    <string name="main_filter_title">Opções de filtro</string>
    <string name="main_filter_profitability">Rentabilidade anual</string>
    <string name="main_filter_initialdate">Data de início</string>
    <string name="main_filter_minimumAmount">Aplicação mínima</string>
    <string name="main_filter_name">Nome</string>
    <string name="main_filter_orderby_title">Ordem</string>
    <string name="main_filter_order_asc">Ascendente</string>
    <string name="main_filter_order_dsc">Decrescente</string>
    <string name="main_filter_clear">Limpar filtro</string>
    <string name="main_filter_cancel">Cancelar</string>
    <string name="main_filter_apply">Aplicar</string>
    <string name="main_filter_menu_name">Filtro</string>
    <string name="detail_fragment_fundmanager_title">Gestor do Fundo</string>
    <string name="detail_fragment_objective_title">Objetivos do fundo</string>
    <string name="detail_fragment_profitability_title">Histórico de rentabilidade</string>

</resources>